Added all existing page to NS project.

--- a/app/App_Resources/Android/settings.json
+++ b/app/App_Resources/Android/settings.json
@@ -1,1 +1,1 @@
-{"appId":"healingnations.healedinspirit","minSdkVersion":null,"targetSdkVersion":null}
+{"appId":"healingthenations.healedinspirit","minSdkVersion":null,"targetSdkVersion":null}
